tests/check_output/snapshots/errors__check_output__main@missing_provides.snap
---
source: tests/check_output/mod.rs
expression: pretty
---
Stdout:


Stderr:
error[E0432]: unresolved import `heater::ScopedFactoryElectricHeater`
  --> examples/missing_provides.rs:13:5
   |
13 | use heater::ElectricHeater;
   |     ^^^^^^^^^^^^^^^^^^^^^^ no `ScopedFactoryElectricHeater` in `heater`

For more information about this error, try `rustc --explain E0432`.
error: could not compile `coffee` (example "missing_provides") due to 1 previous error
